--- a/profile/profile.html
+++ b/profile/profile.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container shadow">
-        <h1 class="wavy-text"><span>P</span><span>r</span><span>o</span><span>f</span><span>i</span><span>l</span><span>e</span></h1>
+        <h1 class="wavy-text"><span>W</span><span>e</span><span>l</span><span>c</span><span>o</span><span>m</span><span>e</span> <span>T</span><span>o</span> <span>M</span><span>y</span> <span>P</span><span>r</span><span>o</span><span>f</span><span>i</span><span>l</span><span>e</span></h1>
         <a href="#content" class="scroll-down">
             <p><span></span></p>
         </a>
