--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <a href="profile/profile.html">Access to profile</a>
+    <a href="clock/clock.html">Access to webclock</a>
     <footer>
         &copy; 2025 MuChanZz All rights reserved.
     </footer>
