--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <a href="profile/profile.html">Access to profile</a>
+    <br>
     <a href="clock/clock.html">Access to webclock</a>
+    <br>
+    <a href="clockgui/index.html">Access to webclock v2 beta</a>
     <footer>
         &copy; 2025 MuChanZz All rights reserved.
     </footer>
