--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>MuChanZz Website</title>
 </head>
 <body>
-    <a href="profile/">Access to profile</a>
+    <a href="profile/profile.html">Access to profile</a>
     <br>
-    <a href="clock">Access to webclock</a>
+    <a href="clock/clock.html">Access to webclock</a>
     <br>
-    <a href="clockgui/index.html">Access to webclock v2 beta</a>
+    <a href="clockgui/">Access to webclock v2 beta</a>
     <footer>
         &copy; 2025 MuChanZz All rights reserved.
     </footer>
