--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>MuChanZz Website</title>
 </head>
 <body>
-    <a href="profile/profile.html">Access to profile</a>
+    <a href="profile/">Access to profile</a>
     <br>
-    <a href="clock/clock.html">Access to webclock</a>
+    <a href="clock/">Access to webclock</a>
     <br>
     <a href="clockgui/">Access to webclock v2 beta</a>
     <footer>
